--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/danialhussin71/clipmagic-n8n.git"
   },
   "engines": {
     "node": ">=18.10",
